--- a/iMathTutor/Base.lproj/Main.storyboard
+++ b/iMathTutor/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13178.6" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="landscape">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13189.4" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="ipad10_5" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13156.2"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13165.3"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -15,65 +15,64 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="iMathTutor" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1112" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-360" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ISB-Rd-5E5">
+                                <rect key="frame" x="20" y="813.5" width="39" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="+360" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NiG-ty-o1W">
+                                <rect key="frame" x="1066" y="813.5" width="42" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U4m-zl-C0m">
+                                <rect key="frame" x="59" y="813.5" width="1007" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rnQ-9T-aE3" customClass="UnitCircleView" customModule="iMathTutor" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="10" width="265" height="265"/>
+                                <rect key="frame" x="20" y="405" width="350" height="350"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="rnQ-9T-aE3" secondAttribute="height" multiplier="1:1" id="5LO-ya-2Jc"/>
+                                    <constraint firstAttribute="width" constant="350" id="E2X-41-LPt"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rST-vJ-LX1">
+                                <rect key="frame" x="20" y="20" width="1072" height="381"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="-360" maxValue="360" translatesAutoresizingMaskIntoConstraints="NO" id="R6F-ZJ-3IO">
-                                <rect key="frame" x="26" y="326" width="221" height="30"/>
+                                <rect key="frame" x="18" y="775" width="1092" height="31"/>
                                 <connections>
                                     <action selector="changeAngle:" destination="BYZ-38-t0r" eventType="valueChanged" id="ECv-ra-qbV"/>
                                 </connections>
                             </slider>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-360" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ISB-Rd-5E5">
-                                <rect key="frame" x="28" y="302" width="42" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="42" id="yYd-RA-x35"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+360" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NiG-ty-o1W">
-                                <rect key="frame" x="203" y="302" width="42" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="42" id="kEa-2S-m4t"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U4m-zl-C0m">
-                                <rect key="frame" x="70" y="302" width="133" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.12984204290000001" green="0.12984612579999999" blue="0.12984395030000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="rnQ-9T-aE3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="0Bh-1Q-Fid"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="rnQ-9T-aE3" secondAttribute="trailing" constant="10" id="2lp-tU-d43"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="R6F-ZJ-3IO" secondAttribute="trailing" constant="422" id="7xT-XZ-tRr"/>
-                            <constraint firstItem="U4m-zl-C0m" firstAttribute="baseline" secondItem="ISB-Rd-5E5" secondAttribute="baseline" id="BdK-4D-dGO"/>
-                            <constraint firstItem="rnQ-9T-aE3" firstAttribute="top" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="CbJ-sg-xax"/>
-                            <constraint firstItem="NiG-ty-o1W" firstAttribute="baseline" secondItem="ISB-Rd-5E5" secondAttribute="baseline" id="ER3-1V-rEz"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="rnQ-9T-aE3" secondAttribute="bottom" constant="100" id="HLJ-gV-ZP5"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="NiG-ty-o1W" secondAttribute="bottom" id="Gsm-BD-Ycj"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="rST-vJ-LX1" secondAttribute="trailing" constant="20" id="H36-gq-5WE"/>
                             <constraint firstItem="ISB-Rd-5E5" firstAttribute="leading" secondItem="R6F-ZJ-3IO" secondAttribute="leading" id="HQq-GU-QOi"/>
                             <constraint firstItem="NiG-ty-o1W" firstAttribute="leading" secondItem="U4m-zl-C0m" secondAttribute="trailing" priority="750" id="Ln9-kT-MVf"/>
-                            <constraint firstItem="R6F-ZJ-3IO" firstAttribute="top" secondItem="ISB-Rd-5E5" secondAttribute="bottom" constant="3" id="Q1J-dY-bVZ"/>
-                            <constraint firstItem="R6F-ZJ-3IO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="28" id="Rq5-My-GoV"/>
-                            <constraint firstItem="R6F-ZJ-3IO" firstAttribute="top" secondItem="rnQ-9T-aE3" secondAttribute="bottom" constant="51" id="TKx-Kt-7Jt"/>
-                            <constraint firstAttribute="bottom" secondItem="R6F-ZJ-3IO" secondAttribute="bottom" constant="20" symbolic="YES" id="hxf-Do-EBg"/>
+                            <constraint firstItem="R6F-ZJ-3IO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Rq5-My-GoV"/>
+                            <constraint firstItem="R6F-ZJ-3IO" firstAttribute="top" secondItem="rnQ-9T-aE3" secondAttribute="bottom" constant="20" id="TKx-Kt-7Jt"/>
+                            <constraint firstItem="rnQ-9T-aE3" firstAttribute="top" secondItem="rST-vJ-LX1" secondAttribute="bottom" constant="4" id="VT9-mS-lOg"/>
+                            <constraint firstItem="NiG-ty-o1W" firstAttribute="top" secondItem="ISB-Rd-5E5" secondAttribute="top" id="VsF-Xm-Ewp"/>
+                            <constraint firstItem="U4m-zl-C0m" firstAttribute="top" secondItem="R6F-ZJ-3IO" secondAttribute="bottom" constant="8.5" id="fAb-ZK-rYV"/>
+                            <constraint firstItem="rST-vJ-LX1" firstAttribute="leading" secondItem="rnQ-9T-aE3" secondAttribute="leading" id="fGh-V4-JsD"/>
+                            <constraint firstItem="U4m-zl-C0m" firstAttribute="top" secondItem="ISB-Rd-5E5" secondAttribute="top" id="lhV-oI-T2I"/>
+                            <constraint firstItem="rST-vJ-LX1" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="qEn-Re-Axk"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="R6F-ZJ-3IO" secondAttribute="trailing" constant="4" id="uMX-MP-Thb"/>
+                            <constraint firstItem="rnQ-9T-aE3" firstAttribute="leading" secondItem="R6F-ZJ-3IO" secondAttribute="leading" id="vJe-sZ-8a4"/>
                             <constraint firstItem="U4m-zl-C0m" firstAttribute="leading" secondItem="ISB-Rd-5E5" secondAttribute="trailing" priority="750" id="yZJ-hU-xwo"/>
                             <constraint firstItem="NiG-ty-o1W" firstAttribute="trailing" secondItem="R6F-ZJ-3IO" secondAttribute="trailing" id="ycI-qI-NQF"/>
-                            <constraint firstItem="rnQ-9T-aE3" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" priority="750" constant="10" id="yli-Xz-bL7"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -84,7 +83,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="31.934032983508249" y="71.200000000000003"/>
+            <point key="canvasLocation" x="94" y="-399"/>
         </scene>
     </scenes>
 </document>
